# chainpipe

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  Anchor.toml  BLOCKERS.md  CLAUDE.md  Cargo.toml  DECENTRALIZATION.md  DEPLOY.md  DEPLOYED.md  DEPLOYMENTS.md  DESIGN-PROMPT.md  Dockerfile.facilitator  Dockerfile.indexer  GRANT_APPLICATION.md  GROK-REVIEW-PROMPT.md  GROK_GRANT_REVIEW_PROMPT.md  LICENSE  MIGRATION.md  Makefile  NEXT-LOOP-PROMPT.md  README.md  SECURITY.md  fly.facilitator.toml  fly.indexer.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
agents/: package-lock.json  package.json
agents/src/: scout.ts  skills-server.ts
dashboard/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
docs/: DEMO-SCRIPT.md  PRODUCT.md  README.md  ROADMAP.md  SUMMARY.md  demo-video-script.md
facilitator/: fly.toml  package-lock.json  package.json
indexer/: package.json  tsconfig.json
scripts/: e2e-devnet.mts  initialize-programs.mts  migrate-configs.mts  seed-devnet.mts  test-onboarding.mts  verify-facilitator.mts
sdk/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
solana/: Anchor.toml  package-lock.json  package.json
solana/programs/bazaar_listings/: Cargo.toml
solana/programs/bazaar_listings/src/: lib.rs
solana/programs/x402_escrow/: Cargo.toml
solana/programs/x402_escrow/src/: lib.rs
tests/: bonded_registry.ts  ping.ts  reputation_bridge.ts  z_dag_escrow.ts
(+116 files in other folders)
