[package]
name = "bazaar_listings"
version = "0.1.0"
description = "LedgerForge BazaarListings — Anchor port of the EVM BazaarListings"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bazaar_listings"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
# Minimal features: plain SPL token only (see x402_escrow Cargo.toml for why).
anchor-spl = { version = "0.31.1", default-features = false, features = ["token"] }
